/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package androidx.health.platform.client.proto;

import "data.proto";

option java_package = "androidx.health.platform.client.proto";
option java_outer_classname = "ResponseProto";

message ReadDataPointResponse {
  optional DataPoint data = 1;
}

message ReadAggregatedDataResponse {
  repeated AggregateDataPoint statistical_data = 1;
  repeated AggregateDataPoint count_data = 2;
  repeated AggregateDataPoint cumulative_data = 3;
  repeated AggregateDataPoint duration_data = 4;
}

message InsertDataResponse {
  repeated string data_point_uid = 1;
}

message ReadDataResponse {
  optional DataPoint data_point = 1;
}

message ReadDataRangeResponse {
  repeated DataPoint data_point = 1;
  optional string page_token = 2;
}

message AggregateDataResponse {
  repeated AggregateDataRow rows = 1;
}